# MyAI

./: .gitignore  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
src/: App.vue
src-tauri/: Cargo.toml  mcp_config.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_initial.sql
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/core_engine/: mod.rs
src-tauri/src/core_engine/llm_router/: deepseek.rs  gemini.rs  intent_classifier.rs  mod.rs  openai.rs  provider_trait.rs  streaming.rs
src-tauri/src/core_engine/memory/: active_workspace.rs  context_assembler.rs  master_spec.rs  mod.rs  query_transformer.rs  refiner_worker.rs
src-tauri/src/core_engine/token_economy/: embedding_engine.rs  mod.rs  prompt_cache_builder.rs  semantic_cache.rs  token_counter.rs
src-tauri/src/event_bus/: bus.rs  mod.rs
src-tauri/src/ipc_commands/: canvas_commands.rs  chat_commands.rs  mcp_commands.rs  memory_commands.rs  mod.rs  settings_commands.rs
src-tauri/src/mcp_client/: mod.rs
src-tauri/src/mcp_client/manager/: mod.rs  process.rs  registry.rs  scanner.rs
src-tauri/src/mcp_client/protocol/: client.rs  mod.rs  transport.rs  types.rs
src-tauri/src/storage/: cache_repo.rs  database.rs  lance_store.rs  master_spec_repo.rs  message_repo.rs  mod.rs  session_repo.rs
src/composables/: useCanvasInteraction.ts  useIpc.ts  useStreamingChat.ts  useTokenEconomy.ts
src/services/: ipc-client.ts  markdown-stream-parser.ts
src/stores/: canvas-store.ts  chat-store.ts  mcp-store.ts  memory-store.ts  (+2 more)
(+19 files in other folders)
